; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exit.c_gather_populate_corpse_crashinfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_exit.c_gather_populate_corpse_crashinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rusage_superset = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@RUSAGE_INFO_CURRENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gather_populate_corpse_crashinfo(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca %struct.rusage_superset, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  store i8* %6, i8** %14, align 8
  %16 = load i32, i32* %8, align 4
  %17 = getelementptr inbounds %struct.rusage_superset, %struct.rusage_superset* %15, i32 0, i32 0
  %18 = load i32, i32* @RUSAGE_INFO_CURRENT, align 4
  %19 = call i32 @gather_rusage_info(i32 %16, %struct.TYPE_2__* %17, i32 %18)
  %20 = getelementptr inbounds %struct.rusage_superset, %struct.rusage_superset* %15, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i8*, i8** %14, align 8
  %29 = call i32 @populate_corpse_crashinfo(i32 %22, i32 %23, %struct.rusage_superset* %15, i32 %24, i32 %25, i32* %26, i32 %27, i8* %28)
  ret void
}

declare dso_local i32 @gather_rusage_info(i32, %struct.TYPE_2__*, i32) #1

declare dso_local i32 @populate_corpse_crashinfo(i32, i32, %struct.rusage_superset*, i32, i32, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
